Fixed article tag heading so that it remains nested without being affected by flex-wrap on nested section tags

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -16,7 +16,7 @@ h1, h2 {
 }
 
 h2 {
-    margin-left: 2rem;
+    flex-basis: 100%;
 }
 
 a {
